--- a/planes.html
+++ b/planes.html
@@ -71,7 +71,8 @@
         <p>&copy; 2025 INVYMENT. Todos los derechos reservados.</p>
     </footer>
     <!-- en el <head> -->
-<script src="static/app.js" defer></script>
+<script src="Estilos/contacto.js" defer></script>
 
 </body>
 </html>
+
