--- a/bienvenida.html
+++ b/bienvenida.html
@@ -9,17 +9,21 @@
 
 <body>
 
-  <!-- FONDO DE RAYAS -->
+  <!-- Fondo animado -->
   <canvas id="rayas"></canvas>
 
-  <!-- TÍTULO -->
-  <h1 id="textoPrincipal"></h1>
+  <!-- Contenedor central -->
+  <div class="contenedor">
 
-  <!-- TEXTO SECUNDARIO QUE APARECE DESPUÉS -->
-  <p id="textoSecundario" style="display:none;">Gracias por confiar en nuestro sistema.</p>
+    <h1 id="titulo">
+      <span id="textoAnimado"></span>
+    </h1>
 
-  <!-- BOTÓN -->
-  <button id="btnContinuar" style="display:none;">Continuar</button>
+    <p id="textoSecundario">Estamos listos para ayudarte a crecer.</p>
+
+    <button id="btnContinuar">Continuar</button>
+
+  </div>
 
   <script src="Estilos/bienvenida.js"></script>
 </body>
